# MUSI6106-Project

./: .gitignore  Audio Software Project Timeline.xlsx  README.md  plug-in host setup for EQ_v1 2.filtergraph  sprint_planning.md
.github/workflows/: cmake.yml
EQ_v1/: EQ_v1.jucer
EQ_v1/Builds/MacOSX/: Info-AU 2.plist  Info-Standalone_Plugin 2.plist  Info-VST3 2.plist
EQ_v1/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
EQ_v1/Source/: PluginEditor 2.h  PluginEditor.cpp  PluginProcessor 2.cpp  PluginProcessor 2.h  PluginProcessor.cpp  PluginProcessor.h
gainTutorial/: gainTutorial.jucer
gainTutorial/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist
gainTutorial/Builds/VisualStudio2019/: gainTutorial.sln  gainTutorial_SharedCode.vcxproj  gainTutorial_SharedCode.vcxproj.filters  gainTutorial_StandalonePlugin.vcxproj  gainTutorial_VST3.vcxproj
gainTutorial/Builds/VisualStudio2022/: gainTutorial.sln  gainTutorial_SharedCode.vcxproj  gainTutorial_SharedCode.vcxproj.filters  gainTutorial_StandalonePlugin.vcxproj  gainTutorial_VST3.vcxproj  resources.rc
gainTutorial/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
gainTutorial/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
pedalnet/: README.md  pedalnet Instruction.md  pedalnet.ckpt  pedalnet.json
pedalnet/new models and sound samples/bias2_1/: bias2_1.ckpt  bias2_1.json
pedalnet/new models and sound samples/bias2_acoustic/: bias2_acoustic.ckpt  bias2_acoustic.json
pedalnet/new models and sound samples/bias2_bass/: bias2_bass.ckpt  bias2_bass.json
pedalnet/new models and sound samples/bias2_blues/: bias2_blues.ckpt  bias2_blues.json
pedalnet/new models and sound samples/bias2_crunch/: bias2_crunch.ckpt
pedalnet/new models and sound samples/bias2_glassy/: bias2_glassy.ckpt  bias2_glassy.json
pedalnet/new models and sound samples/bias2_high_gain/: bias2_high_gain.ckpt
pedalnet/new models and sound samples/bias2_insane/: bias2_insane.ckpt  bias2_insane.json
pedalnet/new models and sound samples/bias2_metal/: bias2_metal.ckpt  bias2_metal.json
plugin_framework/GuitarAmpGUI/: GuitarAmpGUI.jucer
plugin_framework/GuitarAmpGUI/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_foleys_gui_magic 2.cpp
plugin_framework/GuitarAmpGUI/Source/: PluginEditor.cpp  PluginEditor.h  (+3 more)
plugin_framework/GuitarAmpPlugin/: CMakeLists.txt  GuitarAmpPlugin.jucer
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/: project.pbxproj
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/project.xcworkspace/xcuserdata/jocekav.xcuserdatad/: UserInterfaceState.xcuserstate
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/project.xcworkspace/xcuserdata/vedant.xcuserdatad/: UserInterfaceState.xcuserstate
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/xcshareddata/xcschemes/: GuitarAmpPlugin - Shared Code.xcscheme
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/xcuserdata/vedant.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
plugin_framework/GuitarAmpPlugin/Builds/MacOSX/GuitarAmpPlugin.xcodeproj/xcuserdata/vedant.xcuserdatad/xcschemes/: xcschememanagement.plist
plugin_framework/GuitarAmpPlugin/JUCE/DemoRunner.app/Contents/: Info.plist
plugin_framework/GuitarAmpPlugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugin_framework/GuitarAmpPlugin/Source/: Amplifiers.cpp  Amplifiers.h  BaseProcessor.h  Effects.cpp  Effects.h  EqProcessor.h  GraphProcessor 2.h  GraphProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_oneknob.cpp  PluginProcessor_oneknob.h  pluginprocessor_old.cpp  pluginprocessor_old.h
plugin_framework/GuitarAmpPlugin/Source/SmartGuitarAmp/: CSmartGuitarAmp.cpp  CSmartGuitarAmp.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugin_framework/GuitarAmpPlugin/modules/foleys_gui_magic/General/: foleys_ApplicationSettings 2.cpp
plugin_framework/GuitarAmpPlugin/modules/foleys_gui_magic/LookAndFeels/: foleys_LookAndFeel.h
plugin_framework/GuitarAmpPlugin/old/: CMakeLists.txt
plugin_framework/JUCE/: ChangeList.txt
plugin_framework/ProcessorGraphTest/: CMakeLists-new.txt  CMakeLists-relative.txt  CMakeLists-sample.txt  CMakeLists-working.txt  CMakeLists.txt  ProcessorGraphTest.jucer  readme.md
regression/: Untitled.ipynb  regression_explanation.md
smartamp/Chain-ProcessorGraphExample/: AudioProcessorGraphTutorial.jucer  LICENSE  README.md
(+313 files in other folders)
